# PythonTracer

./: .coveragerc  .gitignore  README.md  main.py  pytest.ini  requirements.txt
.github/workflows/: ci.yml
SplinePSF/: CMakeLists.txt
SplinePSF/python/: CMakeCache.txt  cmake_install.cmake  pyproject.toml  setup.py
SplinePSF/python/test/: test_basic.py
SplinePSF/python/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
SplinePSF/python/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
docs/: conf.py  licence.srt  user.rst
python-tracer/Fitting2D/: do_fit_and_gallery.py  do_fit_and_loc_file.py  parse_loc.py
python-tracer/SplineFitterSMAP/: cspline_fitter_dask.py  set_parameters.py
python-tracer/_tests/: __init.py  test_base.py  test_spline_fit.py
python-tracer/utils/: install.txt  simulate_DECODE_stack.py
python_tracer/: __init__.py
python_tracer/Fitting2D/: __init__.py  create_locPALMTracer.py  do_fit_and_gallery.py  do_fit_and_loc_file.py  parse_loc.py  parse_track.py
python_tracer/SplineFitterSMAP/: __init__.py  cspline_fitter.py  cspline_fitter_dask.py  difference_of_gaussians.py  filter2.py  fitspline.py  fspecial.py  maximumfindcall.py  mleFit.py  preview_splinefitter.py  save_as_locpalmtracer.py  save_results_python.py  set_parameters.py
python_tracer/_tests/: __init__.py  test_spline_fit.py
python_tracer/decode/: __init__.py
python_tracer/docs/: conf.py  index.rst  user.rst
python_tracer/utils/: PreviewCheckButton.py  __init__.py  (+2 more)
(+75 files in other folders)
